2010-10-23  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #16110: stdWrap functions stop working as soon as there is one conditional function returning false (Thanks to Jo Hasenau)
	* Added feature #16011: getUrl function support for sending POST data (Thanks to Jigal van Hemert)

2010-10-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #16114: htmlArea RTE: cleanup some js code generation code

2010-10-22  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16094: Label "on-click" for formerly "click-enlarge" does not make sense

2010-10-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #15622: t3lib_TCEforms_inline registers superfluous nested level when renderFieldsOnly is set

2010-10-21  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16065: New layout and labels for tt_content show palette labels without content (Thanks to Jo Hasenau)

2010-10-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #16079: htmlArea RTE: Register RTE scripts with the autoloader
	* Follow-up to feature #16079: htmlArea RTE: Register RTE scripts with the autoloader

2010-10-20  Ernesto Baschny  <ernesto@typo3.org>

	* Release of TYPO3 4.5.0alpha3

2010-10-20  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #15950: use t3editor in file_edit to edit files in fileadmin
	* Fixed bug #16019: Workspaces - Stage notification emails should be localizable

2010-10-20  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16075: Add IfModule mod_rewrite.c to misc/advanced.htaccess
	* Fixed bug #16077: Palette titles have no margin to the left in the new page / tt_content form layouts
	* Fixed bug #16074: Add new API t3lib_befunc::helpTextArray and use it in the ExtDirect tooltips

2010-10-20  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16049: Loading mask doesn't disappear on hitting Esc/cancel loading

2010-10-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #16073: htmlArea RTE: Add paste as plain text feature